Fixes: arrows in image carousel should be centered, services shape animates similar to menu on mobile, featured case studies support additional mobile asset now

--- a/craft/assets/css/custom/_global.css
+++ b/craft/assets/css/custom/_global.css
@@ -40,6 +40,7 @@ hr {
   padding-top: 4px;
   line-height: 1;
   background: #fff;
+  text-align: center;
   transition: var(--transition-default);
   &:hover {
     transform: scale(1.1) translateY(-50%);
