--- a/craft/assets/css/custom/_services.css
+++ b/craft/assets/css/custom/_services.css
@@ -125,7 +125,11 @@
 
 .services-list__content {
   /*display: none;*/
-  opacity: 0;
+  /*opacity: 0;*/
+
+  transform: translate(-120%, 150%) !important;
+  transition: 1s all cubic-bezier(0.19, 1, 0.22, 1);
+  transform-origin: bottom left;
 
   &:after {
     content: '';
@@ -135,11 +139,12 @@
 
   &.visible {
     /*display: block;*/
-    opacity: 1;
+    /*opacity: 1;*/
+    transform: translate(0, 0) !important;
   }
 
   @media (min-width: 768px) {
-    opacity: 1;
+    transform: translate(0, 0) !important;
   }
 }
 
